# water-monitoring-app

./: README.md
startercode/: CMakeLists.txt  Common_limits.csv  PFA_limits.csv  POP_limits.csv  dataset.cpp  dataset.hpp  litter_limits.csv  main.cpp  pages.cpp  pollutant.cpp  pollutant.hpp  pollutanttool_en_de.ts  tablemodel.cpp  tablemodel.hpp  userguide.cpp  userguide.hpp  window.cpp  window.hpp
